--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,17 @@ body {
 }
 
 h1 {
-    color:  #983a3c;
+    color:  #b1212a;
     opacity: 1;
     font-family: 'Quantico', sans-serif;
     text-align: center;
-    text-shadow: -1px 1px 0 black; 
-    text-shadow: 1px 1px 0 #000;
-    text-shadow: 1px -1px 0 #000;
-    text-shadow: -1px -1px 0 #000;
+    text-shadow: -1px 1px 0  rgba(0,0,0,0.5), 1px 1px 0  rgba(0,0,0,0.5), 1px -1px 0  rgba(0,0,0,0.5), -1px -1px 0  rgba(0,0,0,0.5); 
 }
 
 h3 {
     color: #e2ebf0;
     opacity: .9;
+    width: 280px;
 }
 
 #calculator {
@@ -40,7 +38,7 @@ h3 {
     top: 140px;
     position: absolute;
     width: 280px;
-    height: 380px;
+    height: 384px;
     border-radius: 1em;
     z-index: 0;
     font-size: 20px;
@@ -54,9 +52,7 @@ h3 {
     grid-column: 1/6;
     grid-row: 1/2;
     padding: 10px;
-    border-top: solid 2px lightgray; 
-    border-left: solid 2px lightgray;
-    border-bottom: solid 2px lightgray;
+    border: solid 2px lightgray; 
     background-color: black;
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
@@ -65,6 +61,7 @@ h3 {
     font-size:60px;
     overflow-x: auto;
     overflow-y: hidden;
+    box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.5);
 }
 
 #entry {
@@ -81,6 +78,7 @@ h3 {
     padding: 5px;
     font-family: "alarm clock", sans-serif;
     color: orange;
+    box-shadow: 0px 4px 5px 1px rgba(0,0,0,0.5);
 }
 
 #buttons {
@@ -99,6 +97,7 @@ h3 {
     grid-row: 3/7; 
     gap: 2px;
     padding: 2px;
+    box-shadow: 0px 4px 5px 1px rgba(0,0,0,0.3);
 }
 
 .working {
