--- a/styles.css
+++ b/styles.css
@@ -10,26 +10,15 @@ h1 {
     opacity: 1;
     font-family: 'Quantico', sans-serif;
     text-align: center;
-    text-shadow: -1px 1px 0  rgba(0,0,0,0.5), 1px 1px 0  rgba(0,0,0,0.5), 1px -1px 0  rgba(0,0,0,0.5), -1px -1px 0  rgba(0,0,0,0.5); 
+    text-shadow: -1px 1px 0  rgba(0,0,0,0.5), 1px 1px 0  rgba(0,0,0,0.5), 1px -1px 0  rgba(0,0,0,0.5), -1px -1px 0  rgba(0,0,0,0.5);
+    font-size: 3em;
+    margin-bottom: 0; 
 }
 
 h3 {
     color: #e2ebf0;
     opacity: .9;
-    width: 280px;
-}
-
-#calculator {
-    left: 500px;
-    top: 150px;
-    position: absolute;
-    width: 260px;
-    height: 360px;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    background-color: transparent;
-    z-index: 1;
+    width: 400px;
 }
 
 #calculator-border-wrap {
@@ -43,6 +32,15 @@ h3 {
     z-index: 0;
     font-size: 20px;
     box-shadow: 0px 0px 60px 15px rgba(0,0,0,0.75);
+}
+
+#calculator {
+    
+    margin: 10px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    background-color: transparent;
+    z-index: 1;
 }
 
 #display {
@@ -216,3 +214,45 @@ h3 {
     0% {color: red;}
     100% {color: black;} 
  } 
+
+ @media only screen and (max-width: 600px) {
+    
+    #calculator-border-wrap {
+        
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+    #calculator {       
+       margin: 20px;  
+    }
+
+    #display {
+        height: 20vh;
+        width: 100%;
+        box-sizing: border-box;
+    }
+         
+    #entry {
+        height: 10vh;
+        width: 100%;
+        box-sizing: border-box;
+    }
+        
+    #buttons {
+        height: 63vh;
+        width: 100%;
+        box-sizing: border-box;
+    }
+    body {
+        background-image: none;
+    }
+    h1 {
+        display: none;
+    }
+    h3 {
+        display: none;
+    }
+
+ }
