--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,6 @@ h3 {
 }
 
 #calculator {
-    
     margin: 10px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -88,8 +87,8 @@ h3 {
     height: 196px;
     border-top: 2px solid #848789;
     border-right: 2px solid  lightgray;
-    border-bottom-left-radius: 1em;
-    border-bottom-right-radius: 1em;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
     border-left: 2px solid lightgray;
     border-bottom: 2px solid lightgray; 
     grid-column: 1/6;
