--- a/styles.css
+++ b/styles.css
@@ -222,32 +222,32 @@ h3 {
         left: 0;
         width: 100%;
         height: 100%;
-        display: flex;
-        flex-flow: column wrap;
-        justify-items: space-around;
+        display: block;
     }
     #calculator {       
-       margin: 20px; 
-       height: 100%; 
+       margin: 20px;   
     }
 
     #display {
-        height: 20vh;
         width: 100%;
+        height: 20vh;
+        line-height: 15vh;
         box-sizing: border-box;
         border-radius: 16px;
+        margin-bottom: 1vh;
     }
          
     #entry {
-        
         height: 10vh;
+        line-height: 7.5vh;
         width: 100%;
         box-sizing: border-box;
-        border: solid 2px lightgray; 
+        border: solid 2px lightgray;
+        margin-bottom: 1vh; 
     }
         
     #buttons {
-        height: 100%;
+        height: 60vh;
         width: 100%;
         box-sizing: border-box;
         border-radius: 16px;
