--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,6 @@ h3 {
 
 #display {
     height: 80px;
-    width: 236px;
     line-height: 70px;
     grid-column: 1/6;
     grid-row: 1/2;
@@ -63,7 +62,6 @@ h3 {
 
 #entry {
     height: 40px; 
-    width: 246px;
     line-height: 40px;
     grid-column: 1/6;
     grid-row: 2/3; 
@@ -83,7 +81,6 @@ h3 {
     display: grid;
     background: transparent;
     grid-template-columns: repeat(5, 1fr);
-    width: 250x;
     height: 196px;
     border-top: 2px solid #848789;
     border-right: 2px solid  lightgray;
@@ -216,22 +213,28 @@ h3 {
 
  @media only screen and (max-width: 600px) {
     
+    html {
+        overflow-y: hidden;
+    }
+
     #calculator-border-wrap {
         
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
-        display: block;
+        height: 100%;  
     }
-    #calculator {       
-       margin: 20px; 
-       height: 100%;  
+
+   #calculator {  
+        height: 100%;
+        margin: 20px; 
+        display: flex;
+        flex-direction: column; 
     }
 
     #display {
         width: 100%;
-        height: 20vh;
+        flex: 20%;
         line-height: 15vh;
         box-sizing: border-box;
         border-radius: 16px;
@@ -239,7 +242,7 @@ h3 {
     }
          
     #entry {
-        height: 10vh;
+        flex: 10%;
         line-height: 7.5vh;
         width: 100%;
         box-sizing: border-box;
@@ -248,12 +251,12 @@ h3 {
     }
         
     #buttons {
-        height: 60vh;
+        flex: 70%;
         width: 100%;
         box-sizing: border-box;
         border-radius: 16px;
         border: solid 2px lightgray; 
-        margin-bottom: 10vh
+        margin-bottom: 40px;
     }
     #seven {
         border-top-left-radius: 10px;
